--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,32 +1,15 @@
----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: clusterrole
+    app.kubernetes.io/instance: manager-role
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: devconf-operator
+    app.kubernetes.io/part-of: devconf-operator
+    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups:
-  - devconfcz.opdev.com
-  resources:
-  - karbanateks
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - devconfcz.opdev.com
-  resources:
-  - karbanateks/finalizers
-  verbs:
-  - update
-- apiGroups:
-  - devconfcz.opdev.com
-  resources:
-  - karbanateks/status
-  verbs:
-  - get
-  - patch
-  - update
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch"]
