Scaffold Recipe API and controller
operator-sdk create api --group devconfcz --version v1alpha1 --kind Recipe --plugins="deploy-image/v1-alpha" --image=quay.io/rocrisp/recipe:v5 --image-container-port 5000

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -72,6 +72,9 @@ spec:
         - --leader-elect
         image: controller:latest
         name: manager
+        env:
+        - name: RECIPE_IMAGE
+          value: quay.io/rocrisp/recipe:v5
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
