--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,15 +1,59 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: manager-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: devconf-operator
-    app.kubernetes.io/part-of: devconf-operator
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - devconfcz.opdev.com
+  resources:
+  - recipes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - devconfcz.opdev.com
+  resources:
+  - recipes/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - devconfcz.opdev.com
+  resources:
+  - recipes/status
+  verbs:
+  - get
+  - patch
+  - update
