--- a/config/crd/bases/devconfcz.opdev.com_karbanateks.yaml
+++ b/config/crd/bases/devconfcz.opdev.com_karbanateks.yaml
@@ -34,9 +34,15 @@ spec:
           spec:
             description: KarbanatekSpec defines the desired state of Karbanatek
             properties:
-              foo:
-                description: Foo is an example field of Karbanatek. Edit karbanatek_types.go
-                  to remove/update
+              configfile:
+                description: ConfigFile is the path to the configuration file
+                type: string
+              count:
+                description: Replicas is the number of replicas to run
+                format: int32
+                type: integer
+              version:
+                description: Version is the version of the container image to run
                 type: string
             type: object
           status:
