--- a/config/crd/bases/devconfcz.opdev.com_karbanateks.yaml
+++ b/config/crd/bases/devconfcz.opdev.com_karbanateks.yaml
@@ -34,19 +34,21 @@ spec:
           spec:
             description: KarbanatekSpec defines the desired state of Karbanatek
             properties:
-              configfile:
-                description: ConfigFile is the path to the configuration file
-                type: string
               count:
                 description: Replicas is the number of replicas to run
                 format: int32
                 type: integer
               version:
-                description: Version is the version of the container image to run
+                description: Version is the version of the recipe app image to run
                 type: string
             type: object
           status:
             description: KarbanatekStatus defines the observed state of Karbanatek
+            properties:
+              mysqlStatus:
+                type: string
+              recipeAppStatus:
+                type: string
             type: object
         type: object
     served: true
