--- a/config/samples/devconfcz_v1alpha1_recipe.yaml
+++ b/config/samples/devconfcz_v1alpha1_recipe.yaml
@@ -4,4 +4,8 @@ metadata:
   name: recipe-sample
 spec:
   version: "v1.0.0"
-  count: 2
+  replicas: 2
+  hpa:
+    minReplicas: 1
+    maxReplicas: 2
+    targetMemoryUtilization: 60
