Added SecurityContext, PodSecurityContext and Image for Recipe Types

--- a/config/samples/devconfcz_v1alpha1_recipe.yaml
+++ b/config/samples/devconfcz_v1alpha1_recipe.yaml
@@ -16,3 +16,9 @@ spec:
     requests:
       cpu: 5m
       memory: 64Mi
+  database:
+    image: mysql:5.7
+    securityContext:
+      runAsNonRoot: false
+    podSecurityContext:
+      runAsNonRoot: false
