--- a/config/samples/devconfcz_v1alpha1_recipe.yaml
+++ b/config/samples/devconfcz_v1alpha1_recipe.yaml
@@ -26,3 +26,6 @@ spec:
       runAsNonRoot: false
     podSecurityContext:
       runAsNonRoot: false
+    backupPolicySpec:
+      schedule: "*/2 * * * *"
+      timezone: "Europe/Berlin"
