--- a/config/crd/bases/devconfcz.opdev.com_recipes.yaml
+++ b/config/crd/bases/devconfcz.opdev.com_recipes.yaml
@@ -44,6 +44,16 @@ spec:
                   Database specifies the database configuration to use
                   for the workload.
                 properties:
+                  backupPolicySpec:
+                    description: BackupPolicy
+                    properties:
+                      schedule:
+                        description: Backup Schedule
+                        type: string
+                      timezone:
+                        description: Backup Schedule
+                        type: string
+                    type: object
                   image:
                     description: Image set the image which should be used at MySQL
                       DB.
