--- a/config/samples/devconfcz_v1alpha1_recipe.yaml
+++ b/config/samples/devconfcz_v1alpha1_recipe.yaml
@@ -27,5 +27,6 @@ spec:
     podSecurityContext:
       runAsNonRoot: false
     backupPolicySpec:
+      volumeName: "backup"
       schedule: "*/2 * * * *"
       timezone: "Europe/Berlin"
